--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
 
                 <div class="imae">
-                    <img src="1.png" alt="">
+                    <img src="1.png" alt="Aayush Bhandari">
                 </div>
             </div>
 
@@ -47,11 +47,12 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>Welcome to my personal Portfolio. I have a good experience in video and photo editing. Currently
-                        I'm studying BIT in Balmiki Lincoln College, Birtamode. My hobbies are listeaning music,
-                        watching movies, playing cricket, visiting new places. I have a dream to become a professional
-                        front end developer. Now, I'm in the phase of learning and collecting experiences. Even I have a
-                        tech YouTube channel where I share and teach some tech information.</p>
+                    <p>Welcome to my personal Portfolio. I am a dedicated and passionate individual with a keen interest in 
+                        technology. I have skills in front-end development, graphic design, 
+                        and fixing software issues. I am also very good at using MS Office 
+                        and have excellent communication skills. In my free time, I enjoy 
+                        playing cricket, taking photos, listening to music, and traveling. I am 
+                        always eager to learn new things and take on new challenges.</p>
                     <div class="tab-title">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('experience')">Experience</p>
@@ -89,20 +90,40 @@
             <div class="services-list">
                 <div>
                     <i class="fa-solid fa-pen-to-square"></i>
-                    <h2>Editing</h2>
-                    <p>Professional videos and photos editing</p>
+                    <h2>Graphics Designing</h2>
+                    <p>Creative and detail-oriented graphic designer with a strong passion for visual storytelling. Skilled in delivering innovative design solutions across various mediums, including logos, branding, and digital assets.</p>
                     <a href="#">Learn More</a>
                 </div>
                 <div>
-                    <i class="fa-regular fa-object-group"></i>
-                    <h2>Logo Designing</h2>
-                    <p>Professional Logo designing for an organization, company or businesses.</p>
+                    <i class="fa-solid fa-code"></i>
+                    <h2>Front end development</h2>
+                    <p>Enthusiastic front-end developer with a keen eye for user-centric design and seamless functionality. Proficient in creating responsive, interactive websites using HTML, CSS, and JavaScript to deliver exceptional user experiences.</p>
                     <a href="#">Learn More</a>
                 </div>
+                <div>
+                    <i class="fa-solid fa-file-word"></i>
+                    <h2>Microsoft Office Specialist</h2>
+                    <p>Proficient in Microsoft Office suite, including Word, Excel, and PowerPoint, with advanced skills in document creation, data analysis, and presentation design. Capable of streamlining workflows, improving productivity, and delivering polished, professional materials tailored to various business needs.</p>
+                    <a href="#">Learn More</a>
+                </div>
+            </div>
+            <div class="services-list">
                 <div>
                     <i class="fa-solid fa-wand-magic-sparkles"></i>
-                    <h2>Business Card Designing</h2>
-                    <p>Professional personal, business or oganization Business card Designing</p>
+                    <h2>photos and Videos Editing</h2>
+                    <p>Skilled in photo and video editing, transforming raw content into visually captivating stories. Proficient with industry-standard tools to deliver polished, professional-quality media for diverse projects.</p>
+                    <a href="#">Learn More</a>
+                </div>
+                <div>
+                    <i class="fa-brands fa-uncharted"></i>
+                    <h2>Software Troubleshooting</h2>
+                    <p>Experienced in software troubleshooting, adept at diagnosing and resolving issues across various platforms and applications. Skilled in identifying root causes, implementing effective solutions, and ensuring seamless software functionality to minimize downtime and enhance system performance.</p>
+                    <a href="#">Learn More</a>
+                </div>
+                <div>
+                    <i class="fa-solid fa-arrows-to-circle"></i>
+                    <h2>Content Creating in Digital Platform</h2>
+                    <p>Proficient in content creation across digital platforms, including social media, blogs, and multimedia channels. Adept at crafting engaging, high-quality content tailored to diverse audiences, with a focus on driving audience engagement, brand awareness, and overall digital presence.</p>
                     <a href="#">Learn More</a>
                 </div>
             </div>
@@ -160,17 +181,19 @@
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
-                        <input type="text" name="Name" placeholder="Your Name" required>
-                        <input type="email" name="Email" placeholder="Your Email" required>
-                        <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                        <input type="text" name="name" placeholder="Your Name" required>
+                        <input type="email" name="email" placeholder="Your Email" required>
+                        <textarea name="message" rows="6" placeholder="Your Message"></textarea>
                         <button type="submit" class="btn btn2">submit</button>
                     </form>
-                    <span id="msg"></span>
+                    <span class="msg" id="msg">
+                        
+                    </span>
                 </div>
             </div>
         </div>
         <div class="copyright">
-            <p>copyright © <a href="#">Aayush</a>| All Rights Reserved</p>
+            <p>copyright © Aayush | All Rights Reserved</p>
         </div>
     </div>
     <script src="https://kit.fontawesome.com/838e590448.js" crossorigin="anonymous"></script>
