--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li> <a href="#header">Home</a></li>
                     <li> <a href="#about">About</a></li>
                     <li> <a href="#services">Services</a></li>
-                    <li> <a href="#portfolio">Portfolio</a></li>
+                    <li> <a href="#portfolio">My Work</a></li>
                     <li> <a href="#contact">Contact</a> </li>
                     <i class="fa-solid fa-circle-xmark" onclick="closemenu()"></i>
                 </ul>
@@ -27,8 +27,8 @@
 
             <div class="ha">
                 <div class="header-text">
-                    <p>Student of Lincoln University</p>
                     <h1>Hi, I'm <span>Aayush</span> <br>Bhandari from Nepal</h1>
+                    <p>Currently a Student of Affiliated Lincoln University, studying BIT (Hons) in Balmiki Lincoln College.</p>
                 </div>
 
                 <div class="imae">
@@ -57,26 +57,48 @@
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('experience')">Experience</p>
                         <p class="tab-links" onclick="opentab('education')">Education</p>
+                        <p class="tab-links" onclick="opentab('hobbies')">Hobbies & Interests</p>
+                        <p class="tab-links" onclick="opentab('language')">language</p>
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
                             <li><span> Editing</span><br>Photos and Video Editing</li>
-                            <li><span> Designing</span><br>Logo Designing</li>
-                            <li><span> Designing</span><br>Business Card Designing</li>
+                            <li><span> Designing</span><br>Graphics Designing</li>
+                            <li><span> front-end Development</span><br> HTML, CSS, JS</li>
+                            <li><span> Database Management</span><br> MySQL</li>
+                            <li><span> MS-Office</span><br>  Competent in Microsoft Office applications (Word, Excel, PowerPoint) </li>
+                            <li><span> Content Creating</span><br>Content Creating in Digital Platforms</li>
+                            <li><span> Troubleshooting</span><br>Fixing Software bugs, Windows Installing, etc.</li>
+                            <li><span> Good Communication</span><br> Strong interpersonal and communication skills</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
                             <li><span> 2076 BS</span><br>Computer Operator</li>
                             <li><span> 2077 BS</span><br>Video Editing</li>
+                            <li><span> Computer Skills</span><br>Proficient in various computer-related skills</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span> 2075 BS</span><br>Passed SEE in 1st Div</li>
-                            <li><span> 2077 BS</span><br>Passed 12th in 2nd Div (Computer Science) in Birtamode.</li>
-                            <li><span> Currently from 2078 BS</span><br>Studying BIT in Birtamode in Balmiki Lincoln
-                                College</li>
+                            <li><span> Bachelors in Information Technology (HONs) </span><br>Balmiki Lincoln College <br> 2022 (A.D) - Current (5th Semester) <br> • Currently studying BIT(HONs) </li>
+                            <li><span> Higher Secondary Education (+2) in Computer Science  </span><br>Kanchanjunga English Higher Secondary School <br> 2019 - 2021 (A.D)  <br> • Completed Grade 11 in 2020 <br>• Completed Grade 12 in 2021 </li>
+                            <li><span> Secondary Education (SEE)</span><br>Wonder Life Academy <br> 2013 - 2019 (A.D) <br> • Completed Secondary Education Examination (SEE) in 2019 </li>
+                        </ul>
+                    </div>
+                    <div class="tab-contents" id="hobbies">
+                        <ul>
+                            <li><span> Cricket </span><br>Enthusiastic player and follower of the sport.  </li>
+                            <li><span> Photography </span><br>Passionate about capturing moments and visual storytelling.</li>
+                            <li><span> Music </span><br>Avid listener and enjoyer of various music genres</li>
+                            <li><span> Traveling </span><br>Keen on exploring new places and cultures</li>
+                        </ul>
+                    </div>
+                    <div class="tab-contents" id="language">
+                        <ul>
+                            <li><span> Nepali </span><br>Native <br> (Many other local languages of inside Nepal)</li>
+                            <li><span> English </span><br>Proficient</li>
+                            <li><span> Hindi </span><br>Fluent</li>
                         </ul>
                     </div>
                 </div>
