--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                         <a href="https://www.youtube.com/@aayushbhandari"><i class="fa-brands fa-youtube"></i></a>
                         <a href="https://twitter.com/CAayushbhandari"><i class="fa-brands fa-twitter"></i></a>
                     </div>
-                     <a href="./AAYUSH_CV.pdf" download class="btn btn2">Download Resume</a>
+                     <a href="AAYUSH_CV.pdf" download class="btn btn2">Download Resume</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
