--- a/graphics.html
+++ b/graphics.html
@@ -29,6 +29,9 @@
                     <div class="hidden-images">
                         <img src="./images/graphics work/Business Card-Front.jpg" alt="Business Card Front">
                         <img src="./images/graphics work/Business Card-Back.jpg" alt="Business Card Back">
+                        <img src="./images/graphics work/Untitled-1 copy.jpg" alt="Business Card Back">
+                        <img src="./images/graphics work/front.jpg" alt="Business Card Back">
+                        <img src="./images/graphics work/Back.jpg" alt="Business Card Back">
                     </div>
                 </div>
                 <div class="image-container" onclick="openModal(this)">
@@ -59,9 +62,11 @@
                     </div>
                 </div>
                 <div class="image-container" onclick="openModal(this)">
-                    <img src="./images/banners/thumbnail.jpg" alt="logos">
+                    <img src="./images/banners/Youtube Banner1.jpg" alt="logos">
                     <h1>Banners</h1>
                     <div class="hidden-images">
+                        <img src="./images/banners/Youtube Banner.jpg" alt="youtube">
+                        <img src="./images/banners/Youtube Banner1.jpg" alt="youtube">
                         <img src="./images/banners/f. cover photo.JPG" alt="youtube">
                         <img src="./images/banners/Background FAcebook.JPG" alt="workease banner">
                         <img src="./images/banners/design-1.jpg" alt="">
