--- a/graphics.html
+++ b/graphics.html
@@ -29,7 +29,8 @@
                     <div class="hidden-images">
                         <img src="./images/graphics work/Business Card-Front.jpg" alt="Business Card Front">
                         <img src="./images/graphics work/Business Card-Back.jpg" alt="Business Card Back">
-                        <img src="./images/graphics work/Untitled-1 copy.jpg" alt="Business Card Back">
+                        <img src="./images/graphics work/Rejico_Business-Card_Front.jpg" alt="Rejico Business Card Front">
+                        <img src="./images/graphics work/Rejico_Business-Card_Back.jpg" alt="Rejico Business Card Back">
                         <img src="./images/graphics work/front.jpg" alt="Business Card Back">
                         <img src="./images/graphics work/Back.jpg" alt="Business Card Back">
                     </div>
