--- a/graphics.html
+++ b/graphics.html
@@ -84,6 +84,7 @@
                         <img src="./images/others/3.jpeg" alt="">
                         <img src="./images/others/4.jpeg" alt="">
                         <img src="./images/others/5.jpeg" alt="">
+                        <img src="./images/others/6.jpg" alt="">
                     </div>
                 </div>
             </div>
