--- a/graphics.html
+++ b/graphics.html
@@ -68,6 +68,7 @@
                     <div class="hidden-images">
                         <img src="./images/banners/Youtube Banner.jpg" alt="youtube">
                         <img src="./images/banners/Youtube Banner1.jpg" alt="youtube">
+                        <img src="./images/banners/banner (1).jpg" alt="Rejico">
                         <img src="./images/banners/f. cover photo.JPG" alt="youtube">
                         <img src="./images/banners/Background FAcebook.JPG" alt="workease banner">
                         <img src="./images/banners/design-1.jpg" alt="">
@@ -107,7 +108,7 @@
         </div>
     </div>
 
-    <script src="./js/script.js"></script>
+    <!-- <script src="./js/script.js"></script> -->
     <script>
  // Function to go back to the previous page
 function goBack() {
